manifests/monitoring/uptime-kuma/networkpolicy_DISABLED.yaml
apiVersion: cilium.io/v2
kind: CiliumNetworkPolicy
metadata:
  name: uptime-kuma
  namespace: uptime-kuma
spec:
  endpointSelector:
    matchLabels:
      app.kubernetes.io/name: uptime-kuma
  ingress:
    - fromEntities:
        - ingress
      toPorts:
        - ports:
            - port: "3001"
    - fromEntities:
        - host
        - remote-node
      toPorts:
        - ports:
            - port: "3001"
    - fromEndpoints:
        - matchLabels:
            app: cloudflare-tunnel
            io.kubernetes.pod.namespace: cloudflare
      toPorts:
        - ports:
            - port: "3001"
  egress:
    - toEntities:
        - cluster
    - toEndpoints:
        - matchLabels:
            io.kubernetes.pod.namespace: kube-system
            k8s-app: kube-dns
      toPorts:
        - ports:
            - port: "53"
              protocol: UDP
          rules:
            dns:
              - matchPattern: "*"
    - toEntities:
        - world
